# amazing-gpt

./: .gitignore  backup_db_entries.txt  bun.lockb  export.surql  inserts_for_postgres.sql  onboarding.py  package-lock.json  package.json  requirements.txt  surrealdb_to_postgres.py  svelte.config.js  tailwind.config.js
onboarding/: Cargo.toml  parse_html.py  write_to_db.py
onboarding/content/: Prompt Perfector.ts  best-gpts.html  content-planner.html  converter.html  designergpt.html  dispatch_trainer.html  doublespeak.html  editGPT.html  escape-haunt.html  find_gpt.html  glibatree.html  godot-mentor.html  grimoire.html  imagine_anything.html  limitless.html  logo_maker.html  matchmaker.html  newsletter-gpt.html  pawtrait.html  permaculture.html  ph-advisor.html  portrait_cartoonator.html  progressively-gpt.html  prompt-fixer.html  prompt-perfector.html  prompt-perfector.ts  sell-pen.html  seo-fox.html  seo_goat.html  seo_mentor.html  simpsons.html  socratic.html  sound_designer.html  thumbnail-imitator.html  thumbnail-maker.html  video-idea-generator.html  video-metadata.html  vitest.html
onboarding/json_content/: 22500bestcustomgpts.json  contentplanner.json  convertanything.json  designergpt.json  dispatchtrainer.json  doublespeakgpt.json  editgpt.json  escapethehaunt.json  findtheperfectgptforyou.json  godotmentor.json  gptpromptfixer.json  gptsmatchmaker.json  grimoire.json  imagineanything.json  l6helixsounddesigner.json  limitlessgpt.json  logomaker.json  newslettergpt.json  pawtraitcreator.json  permaculturegpt.json  portraitcartoonator.json  seofox.json  (+14 more)
(+147 files in other folders)
