[package]
name = "onboarding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4" # Check https://crates.io/crates/chrono for the latest version
serde = { version = "1.0", features = [
  "derive",
] } # Check https://crates.io/crates/serde for the latest version
surrealdb = "1.0.0"
